# psense

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/psense/: __init__.py  observe.py
src/psense/measure/: __init__.py  base.py  host.py  nv.py
src/psense/observer/: base.py  cpu.py  host.py  nv.py  ram.py
tests/: test_emtpy.py
