[project]
name = "psense"
description = "process state monitoring tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dynamic = ["version"]
authors = [
    {name = "Vladislav A. Proskurov", email = "rilshok@pm.me"},
]
dependencies = [
    "typing-extensions>=4.8.0",
    "nvitop>=1.3.2",
]

[tool.setuptools.dynamic]
version = {attr = "psense.__version__"}

[project.optional-dependencies]
dev = ["psense[lint,test]"]
lint = [
    "mypy>=1.7.1",
    "ruff>=0.6.3",
    "types-pytz>=2024.1",
    "types-psutil",
]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/rilshok/psense"
Repository = "https://github.com/rilshok/psense.git"
Issues = "https://github.com/rilshok/psense/issues"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.vulture]
make_whitelist = true
sort_by_size = true
verbose = false
min_confidence = 100
paths = ["src/psense"]
